[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycnblogs"
version = "0.1.0"
description = "Python SDK for Cnblogs API"
readme = "README_PYTHON.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cnblogs"}
]
keywords = ["cnblogs", "blog", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/cnblogs/cli"
Repository = "https://github.com/cnblogs/cli"
